# hogcv

./: CMakeLists.txt  Doxyfile  README.md  RunningTheApplication.docx  readme.txt
cmake/: CodeCoverage.cmake
hdrs/: HOGCVController.hpp  MainWin.hpp  Parameters.hpp  SetParameters.hpp  mutex.hpp  svm.h
src/: CMakeLists.txt  HOGCVController.cpp  MainWin.cpp  Parameters.cpp  SetParameters.cpp  hogcv.cpp  svm.cpp
test/: CMakeLists.txt  HOGCVControllerTest.cpp  ParametersTest.cpp  SVMCheckParamsTest.cpp  SVMCrossValidationTest.cpp  SVMFreeMemoryTest.cpp  SVMGetFunctionsTest.cpp  SVMPredictProbabilityTest.cpp  SVMPredictTest.cpp  SVMSaveAndLoadModelTest.cpp  SVMTrainingTest.cpp
ui/: MainWin.ui  SetParameters.ui
